--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -872,6 +872,7 @@ body.nav-opened .nav {
     font-weight: 700;
     font-family: "Open Sans", sans-serif;
     color: #fff;
+    text-shadow: 0px 0px 16px rgba(0, 0, 0, 1);
 }
 
 .page-description {
@@ -882,6 +883,7 @@ body.nav-opened .nav {
     font-family: "Merriweather", serif;
     letter-spacing: 0.01rem;
     color: rgba(255,255,255,0.8);
+    text-shadow: 0px 0px 6px rgba(0, 0, 0, 1);
 }
 
 .no-cover.main-header {
