--- a/default.hbs
+++ b/default.hbs
@@ -20,6 +20,15 @@
 
     {{! Ghost outputs important style and meta data with this tag }}
     {{ghost_head}}
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-58091393-1', 'auto');
+        ga('send', 'pageview');
+    </script>
 </head>
 <body class="{{body_class}} nav-closed">
 
@@ -29,11 +38,6 @@
 
         {{! Everything else gets inserted here }}
         {{{body}}}
-
-        <footer class="site-footer clearfix">
-            <section class="copyright"><a href="{{@blog.url}}">{{@blog.title}}</a> &copy; {{date format="YYYY"}}</section>
-            <section class="poweredby">Proudly published with <a href="https://ghost.org">Ghost</a></section>
-        </footer>
 
     </div>
 
